--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
+  align-items: start;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -53,6 +53,18 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+#root {
+  width: 100%;
+}
+
+.app-toolbar {
+  border-radius: 0;
+}
+
+#detail {
+  padding: 1.25em;
 }
 
 @media (prefers-color-scheme: light) {
