--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body {
   font-family: 'Nunito', sans-serif;
 }
 
+
 .action-button {
   border-radius: 50px;
   border: none;
@@ -25,6 +26,7 @@ body {
 
 .auth-background {
   background-color: #EBEBE6;
+  padding-bottom: 50px
 }
 
 .card {
