--- a/src/index.css
+++ b/src/index.css
@@ -32,15 +32,55 @@ a.active {
   background: linear-gradient(90deg, #AB2160 0%, #EF4136 100%);
 }
 
-.input, .textarea {
+.action-button.secondary {
+  background: rgba(184, 173, 134, 0.30);
+  color: #47463D;
+}
+
+.action-button.secondary:hover {
+  background: rgba(184, 173, 134, 0.70);
+  color: #47463D;
+}
+
+.action-button:hover {
+  background: #AB2160;
+}
+
+.input,
+.textarea {
   border-radius: 10px;
   opacity: 0.9;
   background: #FFF;
-  border: 1px solid #E3E1D9; 
+  border: 1px solid #E3E1D9;
 }
 
 .background {
   background-color: #FBFBFB;
+}
+
+.menu ul::before {
+  background-color: transparent;
+}
+
+.project-menu-item {
+  border-left: 4px solid rgba(184, 173, 134, 0.17);
+}
+
+.project-menu-item a {
+  border-radius: 0 4px 4px 0;
+}
+
+.project-menu-item a:hover {
+  background: rgba(184, 173, 134, 0.17);
+}
+
+.project-menu-item.active a {
+  background: rgba(184, 173, 134, 0.17);
+}
+
+.project-menu-item.active {
+  border-left-width: 6px;
+  border-image: linear-gradient(351deg, #AB2160 -4.8%, #EF4136 94.68%) 1 100%;
 }
 
 .modal-backdrop {
@@ -58,6 +98,10 @@ a.active {
   border-radius: 4px;
   padding: 33px 40px 33px 40px;
   box-shadow: 0px 1px 2.4px 0px #FFF inset, 0px 2px 12px 0px rgba(80, 70, 37, 0.08);
+}
+
+.card-selected {
+  background-color: #F8D8D6 !important;
 }
 
 
