--- a/src/css/index.css
+++ b/src/css/index.css
@@ -47,7 +47,7 @@ a.active {
 }
 
 .input,
-.textarea, .number, .select {
+.textarea, .number {
   border-radius: 10px;
   opacity: 0.9;
   background: #FFF;
