Disable fields when project is in review

--- a/src/css/project_draft.css
+++ b/src/css/project_draft.css
@@ -43,3 +43,8 @@
 .card-selected {
   background-color: #F8D8D6 !important;
 }
+.card.disabled {
+  opacity: 0.4;
+  pointer-events: none !important;
+  cursor: not-allowed !important;
+}
