--- a/src/css/index.css
+++ b/src/css/index.css
@@ -79,6 +79,11 @@ a.active {
   box-shadow: 0px 1px 2.4px 0px #FFF inset, 0px 2px 12px 0px rgba(80, 70, 37, 0.08);
 }
 
+.contact-link {
+  color: #D73644;
+  text-decoration-line: underline;
+}
+
 /* Mobile View */
 @media (max-width: 640px) {
   .card {
