--- a/src/css/index.css
+++ b/src/css/index.css
@@ -54,6 +54,13 @@ a.active {
   border: 1px solid #E3E1D9;
 }
 
+.select {
+  border-radius: 10px;
+  opacity: 0.9;
+  background-color: white;
+  border: 1px solid #E3E1D9;
+}
+
 .background {
   background-color: #FBFBFB;
 }
